--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ mkdocs
 setuptools
 Markdown
 beautifulsoup4
-frontmatter
-mdx_wikilink_plus
+python-frontmatter
+git+https://github.com/neurobin/mdx_wikilink_plus/
