--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ setuptools
 Markdown
 beautifulsoup4
 python-frontmatter
-mdx-wikilink-plus
+git+https://github.com/Mara-Li/mdx_wikilink_plus
 mkdocs-callouts
 mkdocs-custom-tags-attributes
