--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ commit_parser = "angular"
 logging_use_named_masks = false
 major_on_zero = true
 tag_format = "v{version}"
-version_variable = "setup.py:version"
+version_variables = ["setup.py:version"]
+build_command = "python setup.py sdist bdist_wheel"
 
 [tool.semantic_release.branches.main]
 match = "(main|master)"
