--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,10 @@ env = "GH_TOKEN"
 dist_glob_patterns = ["dist/*"]
 upload_to_vcs_release = true
 
+[tool.ruff.lint]
+select = ["PTH", "ANN", "N", "Q", "PL", "E", "F", "I"]
+ignore = ["E501"]
+exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.7", "venv3.8", "venv3.9", "venv3.10", "__pycache__"]
+
+[tool.ruff.lint.flake8-quotes]
+inline-quotes = "double"
