--- a/semantic_release.toml
+++ b/semantic_release.toml
@@ -11,7 +11,7 @@ logging_use_named_masks = false
 major_on_zero = true
 allow_zero_version = true
 no_git_verify = false
-tag_format = "{version}"
+tag_format = "v{version}"
 
 [semantic_release.branches.main]
 match = "(main|master)"
