--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 vars:
-  package_name: "mkdocs-obsidian-wikilinks"
+  package_name: "mkdocs-embed-file-plugin"
   pyproject_dir: "{{.Taskfile.Dir}}"
 
 tasks:
@@ -14,13 +14,13 @@ tasks:
     desc: "Clean up old build files"
     cmds:
       - echo "Cleaning build directories..."
-      - rm -r -Force {{.pyproject_dir}}/dist {{.pyproject_dir}}/*.egg-info {{.pyproject_dir}}/.pytest_cache
+      - uv run python clean.py
 
   version:
     desc: "Run semantic-release to determine and bump the version"
     cmds:
       - echo "Running semantic-release to bump the version..."
-      - uv run semantic_release version
+      - uv run semantic-release -c semantic_release.toml version
 
   build:
     desc: "Build the Python package"
@@ -31,17 +31,17 @@ tasks:
   publish:
     desc: "Publish the package to PyPI"
     cmds:
-      - echo "Publishing {{package_name}} to PyPI..."
-      - uv run semantic_release publish
+      - echo "Publishing {{.package_name}} to PyPI..."
+      - uv run semantic-release -c semantic_release.toml publish
 
-    watch:
-      desc: "Start the Watchdog with custom paths"
-      vars:
-        package_path: "mkdocs-obsidian-wikilinks"
-        mkdocs_path: "../mara-li"
-      cmds:
-        - echo "Starting Watchdog for {{.package_path}} with MkDocs at {{.mkdocs_path}}..."
-        - uv python watch.py {{.package_path}} {{.mkdocs_path}}
+  watch:
+    desc: "Start the Watchdog with custom paths"
+    vars:
+      package_path: "mkdocs-obsidian-wikilinks"
+      mkdocs_path: "../mara-li"
+    cmds:
+      - echo "Starting Watchdog for {{.package_path}} with MkDocs at {{.mkdocs_path}}..."
+      - uv run python watch.py {{.package_path}} {{.mkdocs_path}}
 
   release:
     desc: "Perform a full release: version bump, build, and publish"
